--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
+/* styles/globals.css */
+html {
+  scroll-behavior: smooth;
+}
+
+
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
+.slick-prev:before,
+.slick-next:before {
+  color: black;
+}
+
+.slick-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slick-dots li button:before {
+  color: black;
+}
+
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
